dark mode fix

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -11,4 +11,5 @@
 body, html {
     background-color: $background;
     font-family: 'Roboto', sans-serif;
+    min-height: 100vh;
 }
